# RFDet3D

./: .gitignore  .gitmodules  pyproject.toml  run_train.sh  test_inference.py  train.py
notebooks/: train_colab.ipynb
scripts/: prepare_arkitscenes.py
wilddet3d_rfdetr/: __init__.py  _setup_paths.py  connector.py  data_types.py  depth_encoder.py  inference.py  loss.py  model.py
