[project]
name = "rfdet3d"
version = "0.1.0"
description = "RF-DETR + 3D Detection Head: Commercially-viable monocular 3D object detection"
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "numpy>=2.4.4",
    "pillow>=12.2.0",
    "rfdetr>=1.6.4",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "scipy>=1.15.0",
    "pyquaternion>=0.9.9",
    "utils3d>=0.1.0",
    "vis4d>=0.1.2",
    "einops>=0.8.2",
    "opencv-python>=4.13.0.92",
    "timm>=1.0.26",
    "iopath>=0.1.10",
    "pydantic>=2.0",
    "wandb>=0.26.0",
]

[tool.uv]
# vis4d pins pydantic<2 but rfdetr needs pydantic>=2.
# Override to allow both to coexist.
override-dependencies = ["pydantic>=2.0"]
constraint-dependencies = ["pydantic>=2.0"]
